# nlp-preprocessing-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: main.py
src/models/: preprocess_schema.py
src/routers/: preprocess_router.py
src/services/: preprocessing_service.py
src/utils/: arabic_cleaning.py  english_cleaning.py  language_detection.py
