[project]
name = "nlp-preprocessing-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "regex>=2026.4.4",
    "uvicorn>=0.46.0",
]
